--- a/index.html
+++ b/index.html
@@ -110,6 +110,19 @@
         </div>
       </div>
       <div class="row">
+        <div class="col-md-6">
+          <h5>if data is missing</h5>
+        </div>
+        <div class="col-md-6" id="tozero">
+          <div class="checkbox">
+              <input type="checkbox"></input>
+            <label>
+             add '0' as value
+            </label>
+          </div>
+        </div>
+      </div>
+      <div class="row">
         <div class="col-md-12">
           <button class="btn btn-default" id="go">calculate</button>
         </div>
